2010-10-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-connect): Convert the port number read from
	minibuffer to an integer, passing it as a string to
	`make-network-process' isn't portable.
	Patch by Marko Kocic.

2010-10-19  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (invoke-nth-restart): Make sure there is such restart
	before invoking it.

2010-10-19  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (deinit-log-output): Use the right symbol for
	*LOG-OUTPUT*, swank package isn't available at the time
	swank-backend is compiled.

2010-10-16  Stas Boukarev  <stassats@gmail.com>

	* swank-loader.lisp (default-fasl-dir): Guard against using :asdf
	package if it doesn't exist.
	Patch by Anton Vodonosov.

2010-10-16  Attila Lendvai  <attila.lendvai@gmail.com>

	* swank-fuzzy.lisp: speed up by 2-4 times (on sbcl).

	* fuzzy.el: Clean up fuzzy completion's keymap code, drop
	mimic-key-bindings.

	* slime.el: Added separate host and port history for
	slime-connect.
	(slime-lookup-lisp-implementation): better error reporting and
	allow using a functionp to generate the arguments.

	* swank.lisp: Smarten up the label-value-line macros:
	  - support a :label emacs font property
	  - added key args: padding-length, display-nil-value,
	    hide-when-nil, splice-as-ispec, value-text
	  - label-value-line* will evaluate and splice the result
	    of the form after a @ character

	* swank-loader.lisp: Optional integration with ASDF. When ASDF is
	available, store slime fasl's where ASDF would store them. Also
	make sure swank.asd is visible to ASDF.

2010-10-09  Raymond Toy  <toy.raymond@gmail.com>

	* swank-cmucl.lisp (codepoint-length): Implement codepoint-length
	to return the number of codepoints in cmucl's utf-16 strings.

	* swank-backend.lisp (:swank-backend): Export codepoint-length. 
	(codepoint-length): definterface codepoint-length.  Default is to
	use LENGTH.

	* swank-rpc.lisp (write-message): Call